# legacy-FracGen

./: .gitignore  CMakeLists.txt  FracGen.ncb  FracGen.pro  FracGen.sln  README.md
CUDASDL/: CMakeLists.txt  FracGen.cu  FracGen.hpp  FracGenWindow.cpp  FracGenWindow.hpp  main.cpp
FracGen/: FracGen.vcproj  main.cpp
FracGenMPI/: main.cpp  pngWriter.cpp  pngWriter.h
MPI/: CMakeLists.txt  main.cpp  pngWriter.cpp
MPISDL/: CMakeLists.txt  main.cpp
SDL/: CMakeLists.txt  FracGenWindow.cpp  FracGenWindow.hpp  main.cpp
Toybrot/: FracGenWindow.cpp  FracGenWindow.h  main.cpp
distro/debug/: .gitignore
